[gd_scene load_steps=7 format=3 uid="uid://bvr4hftca6325"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_emysi"]
[ext_resource type="AudioStream" uid="uid://dbufs51ominm1" path="res://src/music/5 - Stellar Drift .mp3" id="2_2fiyr"]
[ext_resource type="AudioStream" uid="uid://bkxl08bkjkl3e" path="res://src/sound/button.mp3" id="3_pcteh"]
[ext_resource type="Texture2D" uid="uid://bj5503wsmi4mj" path="res://src/graphics/menuBackground/ringed_gas_giant_planet.png" id="3_xxjxm"]
[ext_resource type="FontFile" uid="uid://cjjgl8wnq5l56" path="res://src/font/CodePredators-Regular.ttf" id="4_tefjg"]
[ext_resource type="PackedScene" uid="uid://dybjx2is3na7j" path="res://scenes/ui/transition_layer.tscn" id="5_v7mur"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emysi")

[node name="AudioPlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2fiyr")
volume_db = 7.89
bus = &"Music"

[node name="AudioPlayerButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pcteh")
bus = &"Sound"

[node name="TimerQuit" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xxjxm")
expand_mode = 1

[node name="TransitionLayer" parent="." instance=ExtResource("5_v7mur")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -232.0
offset_right = 210.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.686275, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tefjg")
theme_override_font_sizes/font_size = 50
text = "Start"
flat = true

[node name="Rules" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.686275, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tefjg")
theme_override_font_sizes/font_size = 50
text = "Rules"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.686275, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tefjg")
theme_override_font_sizes/font_size = 50
text = "Quit"
flat = true

[connection signal="timeout" from="TimerQuit" to="." method="_on_timer_quit_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rules" to="." method="_on_rules_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
